# AutoResearchClaw

./: CONTRIBUTING.md  README.md  config.researchclaw.example.yaml  pyproject.toml
docs/: README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  TESTER_GUIDE.md  TESTER_GUIDE_CN.md  TESTER_GUIDE_JA.md  integration-guide.md  issue_tracker_v9.md  metaclaw-integration-plan.md  researchclaw_run_phase_flows.md
researchclaw/: config.py  health.py  prompts.py
researchclaw/agents/benchmark_agent/: acquirer.py  orchestrator.py
researchclaw/experiment/: validator.py
researchclaw/llm/: client.py
researchclaw/metaclaw_bridge/: lesson_to_skill.py
researchclaw/pipeline/: _helpers.py  code_agent.py  executor.py  runner.py
researchclaw/pipeline/stage_impls/: _code_generation.py  _experiment_design.py  _literature.py
scripts/: metaclaw_start.sh
tests/: test_benchmark_agent.py  test_code_agent.py  test_decision_agent.py  test_rc_config.py  test_rc_executor.py  test_rc_llm.py  test_rc_preflight.py  test_v6_improvements.py
tests/test_metaclaw_bridge/: test_lesson_to_skill.py
