[tool.poetry]
name = "researchclaw"
version = "0.3.1"
description = "ResearchClaw — Autonomous Research Pipeline. Turn any research idea into a paper."
readme = "README.md"
license = "MIT"
packages = [{ include = "researchclaw" }]
include = ["researchclaw/templates/styles/**/*"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyyaml = ">=6.0"
rich = ">=13.0"
arxiv = ">=2.1"
numpy = ">=1.24"
httpx = { version = ">=0.24", optional = true }
scholarly = { version = ">=1.7", optional = true }
crawl4ai = { version = ">=0.2", optional = true }
tavily-python = { version = ">=0.3", optional = true }
pymupdf = { version = ">=1.23", optional = true }
huggingface-hub = { version = ">=0.20", optional = true }
matplotlib = { version = ">=3.7", optional = true }
scipy = { version = ">=1.10", optional = true }

[tool.poetry.extras]
anthropic = ["httpx"]
web = ["scholarly", "crawl4ai", "tavily-python"]
pdf = ["pymupdf"]
all = ["httpx", "scholarly", "crawl4ai", "tavily-python", "pymupdf", "huggingface-hub", "matplotlib", "scipy"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
httpx = ">=0.24"

[tool.poetry.scripts]
researchclaw = "researchclaw.cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
